<resources>
    <string name="app_name">QZinEat</string>
    <string name="qzin_eat">QZin Eat</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="btnLogin">Log In with QZinEat</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="facebook_app_id">1761047824221554</string>
    <string name="btnLoginFacebook">Log In with Facebook</string>
    <string name="signUpText"><u>Sign up</u> with QzinEat</string>

    <string name="etPhone">(xxx)xxx-xxxx</string>

    <string name="hintTitle">Event Title</string>
    <string name="hintDescription">Description</string>
    <string name="hintServiceFee">Service Fee</string>
    <string name="hintEventDate">Event Date</string>
    <string name="hintStreet">Street</string>
    <string name="hintCity">City</string>
    <string name="hintState">State</string>
    <string name="hintCountry">Country</string>
    <string name="hintTimeFrom">Time From</string>
    <string name="hintTimeTo">Time To</string>
    <string name="hintGuestCount">Guest Count</string>
    <string name="hintFirstName">First Name</string>
    <string name="hintMenu">Menu</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_event">Add Event</string>
    <string name="reserve">Reserve</string>

    <string name="sample_party_title">Indian Shushi Party</string>
    <string name="menu_title">What\'s on the menu</string>
    <string name="btn_reserve">Reserve</string>
    <string name="btn_update">Update</string>

    <string name="login_to_reserve">Please login to Reserve!</string>
    <string name="login">LOGIN</string>

    <string name="hello_world">hello world</string>
    <string name="hintEmail">Email</string>
    <string name="hintPhone">Phone</string>
    <string name="navHostEvent">Host New Event</string>
    <string name="navHostedEvents">Hosted Events</string>
    <string name="navMyEvents">My Events</string>
    <string name="navLogin">Login</string>
    <string name="navLogout">Logout</string>
    <string name="switch_to_search">Switch to Searching</string>
    <string name="switch_to_hosting">Switch to Hosting</string>
    <string name="coming_soon">Coming soon…</string>
</resources>
