<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
                android:layout_width="match_parent"
                xmlns:android="http://schemas.android.com/apk/res/android">

  <ImageView
      android:id="@+id/ivSplashBagSignup"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:adjustViewBounds="true"/>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/splash_background">

  </RelativeLayout>

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/login_marginLeft"
                android:layout_marginRight="@dimen/login_marginRight">



    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etSignupEmail"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/etEmail"
        android:typeface="monospace"
        android:background="@drawable/roundshape_btn"
        android:backgroundTint="@color/colorWhiteHalo"
        android:textColor="@color/colorGrayDark"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etSignupPassword"
        android:inputType="textPassword"
        android:hint="@string/etPassword"
        android:typeface="monospace"
        android:background="@drawable/roundshape_btn"
        android:backgroundTint="@color/colorWhiteHalo"
        android:textColor="@color/colorGrayDark"
        android:layout_marginTop="@dimen/login_margin10dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etSignupPhone"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/etPhone"
        android:typeface="monospace"
        android:background="@drawable/roundshape_btn"
        android:backgroundTint="@color/colorWhiteHalo"
        android:textColor="@color/colorGrayDark"
        android:layout_marginTop="@dimen/login_margin10dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/btnSignUp"
        android:text="@string/btnSignUp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:typeface="monospace"
        android:background="@drawable/roundshape_btn"
        android:backgroundTint="@color/light_blue"
        android:layout_marginTop="@dimen/login_margin10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        />

  </LinearLayout>

</RelativeLayout>
